ml project 1 update

--- a/index.html
+++ b/index.html
@@ -166,12 +166,13 @@
                         <!-- ML Project 1 -->
                         <div class="project-card rounded-xl shadow-lg overflow-hidden border border-gray-700">
                             <div class="relative">
-                                <img src="https://mohd-afroz-ali.github.io/assets/img/graduate_img.jpg" alt="ML Phishing Detector" class="w-full h-48 object-cover">
+                                <img src="./projects/ML 1-ml phishing detector/p1imgs/phishing.webp" alt="ML Phishing Detector" class="w-full h-48 object-cover">
                                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
-                                    <h4 class="text-white text-lg font-bold">ML Phishing Detector</h4>
+                                    
                                 </div>
                             </div>
                             <div class="p-6 bg-gray-800">
+                                <h4 class="text-white text-lg font-bold">ML Phishing Detector</h4>
                                 <p class="text-gray-400 text-sm mb-4">A machine learning-based system that detects phishing websites using URL analysis and feature extraction.</p>
                                 <div class="project-buttons-wrapper">
                                     <div class="flex flex-wrap gap-2">
