--- a/index.html
+++ b/index.html
@@ -193,7 +193,38 @@
                             </div>
                         </div>
 
-                        <!-- ML Project 2 -->
+
+                         <!-- ML Project 2 -->
+                        <div class="project-card rounded-xl shadow-lg overflow-hidden border border-gray-700">
+                            <div class="relative">
+                                <img src="https://mohd-afroz-ali.github.io/assets/img/graduate_img.jpg" alt="Student Performance" class="w-full h-48 object-cover">
+                                <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
+                                    
+                                </div>
+                            </div>
+                            <div class="p-6 bg-gray-800">
+                                <h4 class="text-white text-lg font-bold">EduML-Student Success Predictor </h4>
+                                <p class="text-gray-400 text-sm mb-4">A machine learning model that predicts student success based on various features.</p>
+                               <div class="project-buttons-wrapper">
+                                    <div class="flex flex-wrap gap-2">
+                                        <a href="https://github.com/MOHD-AFROZ-ALI/EduML-StudentSuccessPredictor" target="_blank" class="project-button bg-purple-900/30 text-purple-400 py-2 px-4 rounded-full text-sm flex items-center">
+                                            <i class="fas fa-code mr-1"></i> Code
+                                        </a>
+                                        <button class="project-button bg-purple-900/30 text-purple-400 py-2 px-4 rounded-full text-sm flex items-center">
+                                            <i class="fas fa-eye mr-1"></i> Demo
+                                        </button>
+                                        <a href="projects/ML 2-EduML -student success predictor/report/final.html" target="_blank" class="project-button bg-purple-900/30 text-purple-400 py-2 px-4 rounded-full text-sm flex items-center">
+                                            <i class="fas fa-file-alt mr-1"></i> Report
+                                        </a>
+                                        <a href="projects/ML 2-EduML -student success predictor/slides/p1.html" target="_blank" class="project-button bg-purple-900/30 text-purple-400 py-2 px-4 rounded-full text-sm flex items-center">
+                                            <i class="fas fa-info-circle mr-1"></i> Details
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- ML Project 3 -->
                         <div class="project-card rounded-xl shadow-lg overflow-hidden border border-gray-700">
                             <div class="relative">
                                 <img src="https://mohd-afroz-ali.github.io/assets/img/graduate_img.jpg" alt="Customer Segmentation" class="w-full h-48 object-cover">
