update ML proejct 2

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                          <!-- ML Project 2 -->
                         <div class="project-card rounded-xl shadow-lg overflow-hidden border border-gray-700">
                             <div class="relative">
-                                <img src="https://mohd-afroz-ali.github.io/assets/img/graduate_img.jpg" alt="Student Performance" class="w-full h-48 object-cover">
+                                <img src="projects/ML 2-EduML -student success predictor/images/predictive analytics for student success in higher education.jpg" alt="Student Performance" class="w-full h-48 object-cover">
                                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-4">
                                     
                                 </div>
