--- a/projects/ML 2-EduML -student success predictor/slides/p8.html
+++ b/projects/ML 2-EduML -student success predictor/slides/p8.html
@@ -256,7 +256,7 @@
                         <h3 class="text-xl font-medium mb-4">Thank You!</h3>
                         <p class="text-gray-600 mb-4">Questions? I'd be happy to discuss more about this project or other work.</p>
                         <div class="pulse inline-block bg-gradient-to-r from-blue-500 to-indigo-600 text-white font-medium py-2 px-4 rounded-lg">
-                            GitHub Repository Available
+                            <a href="https://github.com/MOHD-AFROZ-ALI/EduML-StudentSuccessPredictor" target="github repo">GitHub Repository Available</a>
                         </div>
                     </div>
                 </div>
