--- a/projects/ML 3-Credit Default PRedict/report ml 3/finalshowcase.html
+++ b/projects/ML 3-Credit Default PRedict/report ml 3/finalshowcase.html
@@ -887,6 +887,36 @@ class CreditDefaultSHAPExplainer:
                     </div>
                     <p class="text-center text-gray-600 mt-4">Complete machine learning lifecycle from training to production monitoring</p>
                 </div>
+                <div class="bg-white p-8 rounded-lg shadow-lg">
+                    <h3 class="text-2xl font-bold mb-6 text-center text-gray-800">Single Credit Detail Default Prediction</h3>
+                    <div class="flex justify-center">
+                        <img src="/projects/ML 3-Credit Default PRedict/images ml3/single pred.png" alt="Single Credit Detail Default Prediction" class="max-w-full h-auto rounded-lg shadow">
+                    </div>
+                    <p class="text-center text-gray-600 mt-4">Single Credit Details Default Preditction with Risk Guage</p>
+                </div>
+                <div class="bg-white p-8 rounded-lg shadow-lg">
+                    <h3 class="text-2xl font-bold mb-6 text-center text-gray-800">Batch Prediction</h3>
+                    <div class="flex justify-center">
+                        <img src="/projects/ML 3-Credit Default PRedict/images ml3/batch pred.png" alt="Batch Prediction" class="max-w-full h-auto rounded-lg shadow">
+                    </div>
+                    <p class="text-center text-gray-600 mt-4">Batch Credit Details Default Preditction with Risk Guage</p>
+                </div>
+                <div class="bg-white p-8 rounded-lg shadow-lg">
+                    <h3 class="text-2xl font-bold mb-6 text-center text-gray-800">Model Analytics</h3>
+                    <div class="flex justify-center">
+                        <img src="/projects/ML 3-Credit Default PRedict/images ml3/Model analytics.png" alt="Model Analytics" class="max-w-full h-auto rounded-lg shadow">
+                    </div>
+                    <p class="text-center text-gray-600 mt-4"> Machine learning Model Analytics</p>
+                </div>
+                <div class="bg-white p-8 rounded-lg shadow-lg">
+                    <h3 class="text-2xl font-bold mb-6 text-center text-gray-800">about</h3>
+                    <div class="flex justify-center">
+                        <img src="/projects/ML 3-Credit Default PRedict/images ml3/about.png" alt="about" class="max-w-full h-auto rounded-lg shadow">
+                    </div>
+                    <p class="text-center text-gray-600 mt-4">Information about the project and its objectives</p>
+                </div>
+
+
             </div>
         </div>
     </div>
@@ -1138,9 +1168,9 @@ jobs:
             </div>
 
             <div class="bg-gray-50 p-8 rounded-lg">
-                <h3 class="text-2xl font-bold mb-6 text-gray-800">Ready for Experian</h3>
+                <h3 class="text-2xl font-bold mb-6 text-gray-800">Ready for fintech</h3>
                 <p class="text-lg text-gray-700 mb-6">
-                    This project demonstrates the exact skills and knowledge required for ML engineering roles at Experian, 
+                    This project demonstrates the exact skills and knowledge required for ML engineering roles , 
                     combining technical expertise with business acumen and regulatory awareness crucial for fintech applications.
                 </p>
                 <div class="flex justify-center space-x-6 text-sm">
@@ -1199,7 +1229,7 @@ jobs:
         </div>
         
         <div class="mt-12">
-            <p class="text-lg opacity-90">Ready to discuss how this expertise can drive innovation at Experian! 🚀</p>
+            <p class="text-lg opacity-90">Ready to discuss how this expertise can drive innovation in fintech! 🚀</p>
         </div>
     </div>
 </section>
@@ -1207,7 +1237,7 @@ jobs:
 <!-- Footer -->
 <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-6 text-center">
-        <p>&copy; 2024 Mohammad Afroz Ali. All rights reserved.</p>
+        <p>&copy; 2025 Mohammad Afroz Ali. All rights reserved.</p>
         <p class="text-gray-400 mt-2">Built with precision for ML Engineering excellence</p>
     </div>
 </footer>
