nlp text summarize

--- a/index.html
+++ b/index.html
@@ -912,26 +912,26 @@
                 <div class="scroll-container">
                     <!-- Certification 1 -->
                     <div class="certificate-card shadow-lg overflow-hidden fade-in" style="animation-delay: 0.2s;">
-                        <img src="https://mohd-afroz-ali.github.io/assets/img/graduate_img.jpg" alt="Machine Learning Certification" class="w-full h-48 object-cover">
+                        <img src="./certificates/complete ds,ml,nlp,dl.jpg" alt="Machine Learning Certification" class="w-full h-48 object-cover">
                         <div class="p-6 bg-gray-800">
-                            <h3 class="text-xl font-bold mb-2 text-purple-300">Machine Learning Specialization</h3>
+                            <h3 class="text-xl font-bold mb-2 text-purple-300">Complete Data Science , ML , NLP , DL </h3>
                             <p class="text-gray-400 mb-3">Krish Naik | Udemy</p>
                             <div class="flex items-center justify-between">
-                                <span class="text-sm text-gray-500">Issued Dec 2023</span>
-                                <a href="#" class="text-purple-400 hover:underline text-sm font-medium">View Certificate</a>
+                                <span class="text-sm text-gray-500">Issued  2025</span>
+                                <a href="./certificates/complete ds,ml,nlp,dl.jpg" class="text-purple-400 hover:underline text-sm font-medium">View Certificate</a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Certification 2 -->
                     <div class="certificate-card shadow-lg overflow-hidden fade-in" style="animation-delay: 0.4s;">
-                        <img src="https://mohd-afroz-ali.github.io/assets/img/graduate_img.jpg" alt="Deep Learning Certification" class="w-full h-48 object-cover">
+                        <img src="./certificates/complete mlops with projects.jpg" alt="MLOps with 10+ projects" class="w-full h-48 object-cover">
                         <div class="p-6 bg-gray-800">
-                            <h3 class="text-xl font-bold mb-2 text-purple-300">Deep Learning Fundamentals</h3>
+                            <h3 class="text-xl font-bold mb-2 text-purple-300">Complete MLops with 10+ Projects</h3>
                             <p class="text-gray-400 mb-3">Krish Naik | Udemy</p>
                             <div class="flex items-center justify-between">
-                                <span class="text-sm text-gray-500">Issued Feb 2024</span>
-                                <a href="#" class="text-purple-400 hover:underline text-sm font-medium">View Certificate</a>
+                                <span class="text-sm text-gray-500">Issued  2025</span>
+                                <a href="./certificates/complete mlops with projects.jpg" class="text-purple-400 hover:underline text-sm font-medium">View Certificate</a>
                             </div>
                         </div>
                     </div>
