--- a/projects/ML 3-Credit Default PRedict/report ml 3/finalshowcase.html
+++ b/projects/ML 3-Credit Default PRedict/report ml 3/finalshowcase.html
@@ -897,7 +897,7 @@ class CreditDefaultSHAPExplainer:
                 <div class="bg-white p-8 rounded-lg shadow-lg">
                     <h3 class="text-2xl font-bold mb-6 text-center text-gray-800">Batch Prediction</h3>
                     <div class="flex justify-center">
-                        <img src="/projects/ML 3-Credit Default PRedict/images ml3/batch pred.png" alt="Batch Prediction" class="max-w-full h-auto rounded-lg shadow">
+                        <img src="/projects/ML 3-Credit Default PRedict/images ml3/Batch Pred.png" alt="Batch Prediction" class="max-w-full h-auto rounded-lg shadow">
                     </div>
                     <p class="text-center text-gray-600 mt-4">Batch Credit Details Default Preditction with Risk Guage</p>
                 </div>
