--- a/index.html
+++ b/index.html
@@ -246,6 +246,11 @@
                                 <p class="text-gray-400 text-sm mb-4">End-to-End ML Dashboard for Credit Risk Assessment with SHAP Explainer and deployment providing real-time credit default risk prediction with detailed explanations and feature importance to help financial institutions make informed lending decisions.</p>
                                 <div class="project-buttons-wrapper">
                                     <div class="flex flex-wrap gap-2">
+                                        <a href="https://credit-analytics-app-bymohdafrozali.streamlit.app/" target="_blank" 
+                                           class="project-button bg-purple-900/50 text-purple-300 py-3 px-6 rounded-full text-sm flex items-center 
+                                                  transition duration-300 ease-in-out transform hover:bg-purple-700 hover:text-white hover:scale-105 shadow-md hover:shadow-lg">
+                                            <i class="fas fa-file-alt mr-2"></i> DEMO
+                                        </a>
                                         <a href="https://github.com/MOHD-AFROZ-ALI/Credit_Default_Predict" target="_blank" 
                                         class="project-button bg-purple-900/30 text-purple-400 py-2 px-4 rounded-full text-sm flex items-center">
                                             <i class="fas fa-code mr-1"></i> Code
@@ -1205,7 +1210,7 @@
                     <a href="https://github.com/MOHD-AFROZ-ALI" target="_blank" class="text-gray-400 hover:text-purple-400 transition-colors">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="www.linkedin.com/in/mohd-afroz-ali" target="_blank" class="text-gray-400 hover:text-purple-400 transition-colors">
+                    <a href="https://www.linkedin.com/in/mohd-afroz-ali/" target="_blank" class="text-gray-400 hover:text-purple-400 transition-colors">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <!-- <a href="https://x.com/" target="_blank" class="text-gray-400 hover:text-purple-400 transition-colors">
