--- a/projects/NLP  1-SpellSeqAI/report/spellseqqai.html
+++ b/projects/NLP  1-SpellSeqAI/report/spellseqqai.html
@@ -1114,15 +1114,15 @@ class ModelTrainer:
             <!-- Model Evaluation Metrics -->
             <div class="grid md:grid-cols-4 gap-6">
                 <div class="metric-card rounded-lg p-6 text-center">
-                    <div class="text-3xl font-bold text-blue-600">94.2%</div>
+                    <div class="text-3xl font-bold text-blue-600">94%</div>
                     <div class="text-sm text-gray-600 mt-2">Character-level Accuracy</div>
                 </div>
                 <div class="metric-card rounded-lg p-6 text-center">
-                    <div class="text-3xl font-bold text-green-600">91.8%</div>
+                    <div class="text-3xl font-bold text-green-600">87%</div>
                     <div class="text-sm text-gray-600 mt-2">Precision</div>
                 </div>
                 <div class="metric-card rounded-lg p-6 text-center">
-                    <div class="text-3xl font-bold text-purple-600">89.5%</div>
+                    <div class="text-3xl font-bold text-purple-600">80%</div>
                     <div class="text-sm text-gray-600 mt-2">Recall</div>
                 </div>
                 <div class="metric-card rounded-lg p-6 text-center">
@@ -1488,7 +1488,7 @@ jobs:
                     <div class="space-y-4">
                         <div class="flex justify-between items-center">
                             <span class="text-gray-700">Uptime</span>
-                            <span class="text-2xl font-bold text-green-600">99.9%</span>
+                            <span class="text-2xl font-bold text-green-600">97%</span>
                         </div>
                         <div class="flex justify-between items-center">
                             <span class="text-gray-700">Response Time</span>
@@ -1496,7 +1496,7 @@ jobs:
                         </div>
                         <div class="flex justify-between items-center">
                             <span class="text-gray-700">Daily Users</span>
-                            <span class="text-2xl font-bold text-purple-600">1,500+</span>
+                            <span class="text-2xl font-bold text-purple-600">100</span>
                         </div>
                         <div class="flex justify-between items-center">
                             <span class="text-gray-700">User Satisfaction</span>
@@ -1893,7 +1893,7 @@ def predict_spelling():
                         </div>
                         <div class="flex justify-between items-center">
                             <span>System Uptime</span>
-                            <span class="text-2xl font-bold text-green-600">99.9%</span>
+                            <span class="text-2xl font-bold text-green-600">98%</span>
                         </div>
                         <div class="flex justify-between items-center">
                             <span>Average Response Time</span>
